@@ -140,6 +140,7 @@ James Dietrich
 Janek (xeruf)
 Jason Dreisbach (jtdreisb)
 Jason W. Ryan
+jc-SpaceXp
 jcarreja
 Jeet Sukumaran (jeetsukumaran)
 Jeffrey C. Albro (jalbro)
